src/org/api/rpc/1.17.1/rpc.imqclient.md
---
title: "IMQClient class · @imqueue/rpc v1.17.1 (archived)"
description: "Class IMQClient - base abstract class for service clients."
apiCrumbs: [{"name":"API reference","url":"/api/"},{"name":"@imqueue/rpc","url":"/api/rpc/1.17.1/"},{"name":"IMQClient","url":"/api/rpc/1.17.1/rpc.imqclient/"}]
noindex: true
latestUrl: "/api/rpc/latest/rpc.imqclient/"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

# IMQClient class

Class IMQClient - base abstract class for service clients.

**Signature:**

```typescript
export declare abstract class IMQClient extends EventEmitter 
```
**Extends:** EventEmitter

## Constructors

<table><thead><tr><th>

Constructor


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[(constructor)(options, serviceName, name)](/api/rpc/1.17.1/rpc.imqclient._constructor_/)


</td><td>


</td><td>

Class constructor



</td></tr>
</tbody></table>

## Properties

<table><thead><tr><th>

Property


</th><th>

Modifiers


</th><th>

Type


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[id](/api/rpc/1.17.1/rpc.imqclient.id/)


</td><td>

`readonly`


</td><td>

number


</td><td>


</td></tr>
<tr><td>

[name](/api/rpc/1.17.1/rpc.imqclient.name/)


</td><td>

`readonly`


</td><td>

string


</td><td>


</td></tr>
<tr><td>

[options](/api/rpc/1.17.1/rpc.imqclient.options/)


</td><td>

`readonly`


</td><td>

[IMQClientOptions](/api/rpc/1.17.1/rpc.imqclientoptions/)


</td><td>


</td></tr>
<tr><td>

[serviceName](/api/rpc/1.17.1/rpc.imqclient.servicename/)


</td><td>

`readonly`


</td><td>

string


</td><td>


</td></tr>
</tbody></table>

## Methods

<table><thead><tr><th>

Method


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[broadcast(payload)](/api/rpc/1.17.1/rpc.imqclient.broadcast/)


</td><td>


</td><td>

Broadcasts given payload to all other service clients subscribed. So this is like client-to-clients publishing.


</td></tr>
<tr><td>

[create(name, options)](/api/rpc/1.17.1/rpc.imqclient.create/)


</td><td>

`static`


</td><td>

Creates client for a service with the given name


</td></tr>
<tr><td>

[describe(delay)](/api/rpc/1.17.1/rpc.imqclient.describe/)


</td><td>


</td><td>

Returns service description metadata.


</td></tr>
<tr><td>

[destroy()](/api/rpc/1.17.1/rpc.imqclient.destroy/)


</td><td>


</td><td>

Destroys client


</td></tr>
<tr><td>

[remoteCall(args)](/api/rpc/1.17.1/rpc.imqclient.remotecall/)


</td><td>

`protected`


</td><td>

Sends call to remote service method

 protected


</td></tr>
<tr><td>

[start()](/api/rpc/1.17.1/rpc.imqclient.start/)


</td><td>


</td><td>

Initializes client work


</td></tr>
<tr><td>

[stop()](/api/rpc/1.17.1/rpc.imqclient.stop/)


</td><td>


</td><td>

Stops client work


</td></tr>
<tr><td>

[subscribe(handler)](/api/rpc/1.17.1/rpc.imqclient.subscribe/)


</td><td>


</td><td>

Adds subscription to service event channel


</td></tr>
<tr><td>

[unsubscribe()](/api/rpc/1.17.1/rpc.imqclient.unsubscribe/)


</td><td>


</td><td>

Destroys subscription channel to service

 {<!-- -->Promise<void>}


</td></tr>
</tbody></table>

